--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tod app</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <nav>
+    <div class="left">
+      <h2>App Names</h2>
+      <!-- <image src="" class="icon" /> -->
+    </div>
+    <div class="right">
+      <ul>
+        <li>Tools 1</li>
+        <li>Tools 2</li>
+        <li>Tools 3</li>
+        <li>Tools 4</li>
+        <li>Tools 5</li>
+      </ul>
+    </div>
+  </nav>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
