Buat structure HTML to do list

--- a/index.html
+++ b/index.html
@@ -10,21 +10,37 @@
 </head>
 
 <body>
-  <nav>
-    <div class="left">
-      <h2>App Names</h2>
-      <!-- <image src="" class="icon" /> -->
-    </div>
-    <div class="right">
-      <ul>
-        <li>Tools 1</li>
-        <li>Tools 2</li>
-        <li>Tools 3</li>
-        <li>Tools 4</li>
-        <li>Tools 5</li>
+  <div class="container">
+    <nav>
+      <div class="left">
+        <h1>App Names</h1>
+        <!-- <image src="" class="icon" /> -->
+      </div>
+      <div class="right">
+        <ul>
+          <li>Tools 1</li>
+          <li>Tools 2</li>
+          <li>Tools 3</li>
+          <li>Tools 4</li>
+          <li>Tools 5</li>
+        </ul>
+      </div>
+    </nav>
+    
+    <div class="todo">
+        <h2>To-Do List</h2>
+      <div class="row">
+        <input type="text" class="input-list" placeholder="Add your activity">
+        <button>Add</button>
+      </div>
+      <ul class="list-task">
+        <li>Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>
       </ul>
     </div>
-  </nav>
+  </div>
+
 
   <script type="module" src="/main.js"></script>
 </body>
