--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <body>
   <nav>
     <div class="left">
-      <h1>App Names</h1>
+      <h1>Todo List</h1>
       <!-- <image src="" class="icon" /> -->
     </div>
     <div class="right">
       <ul>
-        <li>Tools 1</li>
-        <li>Tools 2</li>
-        <li>Tools 3</li>
-        <li>Tools 4</li>
-        <li>Tools 5</li>
+        <li>About</li>
+        <li>Github</li>
       </ul>
     </div>
   </nav>
@@ -40,14 +37,21 @@
       <input name="todoContainer" type="checkbox">
     </div>
 
-    <button id="add-button" class="add-button">
+    <button id="add-button" class="add-button" onclick="controlPopup()">
       <span>+</span>
       <div class="particles"> </div>
     </button>
+
+    <div class="box-popup" id="box-popup">
+      <div class="show-popup menu">
+        <input type="text" class="inputTodo-list" placeholder="Add your activity!">
+        <button class="todo-button">Add</button>
+      </div>
+    </div>
   </div>
+  
 
-
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
