cuman nambahin component baru doang bang

--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
   </nav>
 
   <div class="container">
-    <div class="containerTodo">
-      <label for="todoContainer">
-        <h3>Task list</h3>
-      </label>
-      <input name="todoContainer" type="checkbox">
-    </div>
-    <div class="containerTodo">
-      <label for="todoContainer">
-        <h3>Task list</h3>
-      </label>
-      <input name="todoContainer" type="checkbox">
+    <div id="containerTodo">
+      <div class="containerTodo">
+        <label for="todoContainer">
+          <h3>Task list</h3>
+        </label>
+        <input name="todoContainer" type="checkbox">
+      </div>
+      <div class="containerTodo">
+        <label for="todoContainer">
+          <h3>Task list</h3>
+        </label>
+        <input name="todoContainer" type="checkbox">
+      </div>
     </div>
 
     <button id="add-button" class="add-button">
@@ -45,7 +47,7 @@
     <div id="popup-container" class="hide box-popup">
       <div id="menu" class="hide-popup menu">
         <h1>ADD YOUR FCKING ACTIVITY</h1>
-        <input type="text" class="inputTodo-list" placeholder="Add your activity!">
+        <input type="text" id="todo-input" class="inputTodo-list" placeholder="Add your activity!">
         <button id="todo-button">Add</button>
         <button class="cancel">Cancel</button>
       </div>
