Cuman pull request doang bang aowkaowkoawk (#12)
* ambalabu (#10)

* adding box for the notification to appeared

* BANGKE (#11)

---------

Co-authored-by: Shammy. <bulksamm270805@gmail.com>

Eksperimen merging ✌🏼

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tod app</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="notification.css">
 </head>
 
 <body>
@@ -52,6 +53,21 @@
         <button class="cancel">Cancel</button>
       </div>
     </div>
+
+    <div class="todo-notification">
+      <div class="todo-notification-header">
+        <h3>CONTEXT!</h3>
+        <button id="todo-notification-exit" class="todo-notification-exit">x</button>
+      </div>
+      <p>Notifikasinya coy :v</p>
+      <div class="todo-notification-buttons">
+        <button class="primary-button">button 1</button>
+        <button class="secondary-button">button 2</button>
+      </div>
+
+      <!-- biarin aja dulu kosong soalnya init notifikasi yang bakalan diisi di JS -->
+    </div>
+
   </div>
 
 
