--- a/index.html
+++ b/index.html
@@ -54,16 +54,13 @@
       </div>
     </div>
 
-    <div class="todo-notification">
+    <div id="todo-notification-container" class="todo-notification close">
       <div class="todo-notification-header">
-        <h3>CONTEXT!</h3>
+        <h3 id="todo-notification-title"></h3>
         <button id="todo-notification-exit" class="todo-notification-exit">x</button>
       </div>
-      <p>Notifikasinya coy :v</p>
-      <div class="todo-notification-buttons">
-        <button class="primary-button">button 1</button>
-        <button class="secondary-button">button 2</button>
-      </div>
+      <p id="description"></p>
+      <div class="todo-notification-buttons" id="buttons-notification"> </div>
 
       <!-- biarin aja dulu kosong soalnya init notifikasi yang bakalan diisi di JS -->
     </div>
