adding the new feature

--- a/index.html
+++ b/index.html
@@ -26,18 +26,6 @@
 
   <div class="container">
     <div id="containerTodo">
-      <div class="containerTodo">
-        <label for="todoContainer">
-          <h3>Task list</h3>
-        </label>
-        <input name="todoContainer" type="checkbox">
-      </div>
-      <div class="containerTodo">
-        <label for="todoContainer">
-          <h3>Task list</h3>
-        </label>
-        <input name="todoContainer" type="checkbox">
-      </div>
     </div>
 
     <button id="add-button" class="add-button">
@@ -47,10 +35,10 @@
 
     <div id="popup-container" class="hide box-popup">
       <div id="menu" class="hide-popup menu">
-        <h1>ADD YOUR FCKING ACTIVITY</h1>
+        <h1 class="no-select">ADD YOUR FCKING ACTIVITY</h1>
         <input type="text" id="todo-input" class="inputTodo-list" placeholder="Add your activity!">
-        <button id="todo-button">Add</button>
-        <button class="cancel">Cancel</button>
+        <button id="todo-button" class="no-select">Add</button>
+        <button class="cancel no-select">Cancel</button>
       </div>
     </div>
 
