--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <nav>
     <div class="left">
       <h1>Todo List</h1>
+      <p>Make with ❤️</p>
       <!-- <image src="" class="icon" /> -->
     </div>
     <div class="right">
